--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </nav>
                 <nav class="Navbar__Items">
                   <div class="Navbar__Link">
-                    <a href="#" target="_blank">Kuka olen</a>
+                    <a href="kukaolen.html" target="_blank">Kuka olen</a>
                   </div>
                   <div class="Navbar__Link">
                     <a href="#" target="_blank">Työhistoriani</a>
