--- a/otayhteytta.html
+++ b/otayhteytta.html
@@ -16,7 +16,6 @@
                   <div class="Navbar__Link Navbar__Link-toggle">
                     <i class="material-icons" style="font-size: 36px">menu</i>
                   </div>
-                </nav>
                 <nav class="Navbar__Items">
                   <div class="Navbar__Link">
                     <a href="#" target="_blank">Etusivu</a>
@@ -53,7 +52,7 @@
         </div>
         
         <div class="footer">
-            <p>© Katriina Tiainen 2023 | <a href="#" target="_blank">Ota yhteyttä</a></p>
+            <p>© Katriina Tiainen 2023 | <a href="otayhteytta.html" target="_blank">Ota yhteyttä</a></p>
         </div>
         <script>
           function classToggle() {
