--- a/koulutustaustani.html
+++ b/koulutustaustani.html
@@ -11,24 +11,23 @@
         <div class="header">
             <div class="Navbar">
                   <div class="Navbar__Link-brand">
-                    <a href="#" target="_blank">Katriina Tiainen</a>
+                    <a href="index.html" target="_blank">Katriina Tiainen</a>
                   </div>
                   <div class="Navbar__Link Navbar__Link-toggle">
                     <i class="material-icons" style="font-size: 36px">menu</i>
                   </div>
-                </nav>
                 <nav class="Navbar__Items">
                   <div class="Navbar__Link">
-                    <a href="#" target="_blank">Etusivu</a>
+                    <a href="index.html" target="_blank">Etusivu</a>
                   </div>
                   <div class="Navbar__Link">
-                    <a href="#" target="_blank">Kuka olen</a>
+                    <a href="kukaolen.html" target="_blank">Kuka olen</a>
                   </div>
                   <div class="Navbar__Link">
-                    <a href="#" target="_blank">Työhistoriani</a>
+                    <a href="tyohistoriani" target="_blank">Työhistoriani</a>
                   </div>
                   <div class="Navbar__Link">
-                    <a href="#" target="_blank">Ota yhteyttä</a>
+                    <a href="otayhteytta.html" target="_blank">Ota yhteyttä</a>
                   </div>
                 </nav>
               </div>
@@ -56,7 +55,7 @@
         </div>
 
         <div class="footer">
-            <p>© Katriina Tiainen 2023 | <a href="#" target="_blank">Ota yhteyttä</a></p>
+            <p>© Katriina Tiainen 2023 | <a href="otayhteytta.html" target="_blank">Ota yhteyttä</a></p>
         </div>
         <script>
           function classToggle() {
