--- a/tyohistoriani.html
+++ b/tyohistoriani.html
@@ -11,7 +11,7 @@
         <div class="header">
             <div class="Navbar">
                   <div class="Navbar__Link-brand">
-                    <a href="#" target="_blank">Katriina Tiainen</a>
+                    <a href="index.html" target="_blank">Katriina Tiainen</a>
                   </div>
                   <div class="Navbar__Link Navbar__Link-toggle">
                     <i class="material-icons" style="font-size: 36px">menu</i>
@@ -19,16 +19,16 @@
                 </nav>
                 <nav class="Navbar__Items">
                   <div class="Navbar__Link">
-                    <a href="#" target="_blank">Etusivu</a>
+                    <a href="index.html" target="_blank">Etusivu</a>
                   </div>
                   <div class="Navbar__Link">
-                    <a href="#" target="_blank">Kuka olen</a>
+                    <a href="kukaolen.html" target="_blank">Kuka olen</a>
                   </div>
                   <div class="Navbar__Link">
-                    <a href="#" target="_blank">Koulutustaustani</a>
+                    <a href="koulutustaustani.html" target="_blank">Koulutustaustani</a>
                   </div>
                   <div class="Navbar__Link">
-                    <a href="#" target="_blank">Ota yhteyttä</a>
+                    <a href="otayhteytta.html" target="_blank">Ota yhteyttä</a>
                   </div>
                 </nav>
               </div>
@@ -52,7 +52,7 @@
         </div>
         
         <div class="footer">
-            <p>© Katriina Tiainen 2023 | <a href="#" target="_blank">Ota yhteyttä</a></p>
+            <p>© Katriina Tiainen 2023 | <a href="otayhteytta.html" target="_blank">Ota yhteyttä</a></p>
         </div>
         <script>
           function classToggle() {
