--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="content">
             <div class="row">
             <div class="column">
-                <img src="katriinatiainen.jpg" alt="Kuva Katriinasta hymyilemässä">
+                <img src="katriinatiainen.jpg" alt="Kuva hymyilevästä Katriinasta">
             </div>
 
             <div class="column">
@@ -43,9 +43,9 @@
             </div>
 
             <div class="column">
-                <div class="fplink">
+              <div class="fplink">
                     <a href="kukaolen.html" target="_blank">Kuka olen</a>
-                </div>
+              </div>
                 <p>Olen pirteä ja neuvokas valtion virkahenkilö, joka on onnellisimmillaan lankakerien ympäröimänä. Intohimonani on uuden oppiminen – ja salmiakki.</p>
             </div>
 
