--- a/otayhteytta.html
+++ b/otayhteytta.html
@@ -11,23 +11,23 @@
         <div class="header">
             <div class="Navbar">
                   <div class="Navbar__Link-brand">
-                    <a href="#" target="_blank">Katriina Tiainen</a>
+                    <a href="index.html" target="_blank">Katriina Tiainen</a>
                   </div>
                   <div class="Navbar__Link Navbar__Link-toggle">
                     <i class="material-icons" style="font-size: 36px">menu</i>
                   </div>
                 <nav class="Navbar__Items">
                   <div class="Navbar__Link">
-                    <a href="#" target="_blank">Etusivu</a>
+                    <a href="index.html" target="_blank">Etusivu</a>
                   </div>
                   <div class="Navbar__Link">
-                    <a href="#" target="_blank">Kuka olen</a>
+                    <a href="kukaolen.html" target="_blank">Kuka olen</a>
                   </div>
                   <div class="Navbar__Link">
-                    <a href="#" target="_blank">Työhistoriani</a>
+                    <a href="tyohistoriani.html" target="_blank">Työhistoriani</a>
                   </div>
                   <div class="Navbar__Link">
-                    <a href="#" target="_blank">Koulutustaustani</a>
+                    <a href="koulutustaustani" target="_blank">Koulutustaustani</a>
                   </div>
                 </nav>
               </div>
