--- a/index.html
+++ b/index.html
@@ -8,29 +8,28 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
     </head>
     <body>
         <div class="header">
             <div class="Navbar">
                   <div class="Navbar__Link-brand">
-                    <a href="index.html" target="_blank">Katriina Tiainen</a>
+                    <a href="index.html">Katriina Tiainen</a>
                   </div>
                   <div class="Navbar__Link Navbar__Link-toggle">
                     <i class="material-icons" style="font-size: 36px">menu</i>
                   </div>
                 <nav class="Navbar__Items">
                   <div class="Navbar__Link">
-                    <a href="kukaolen.html" target="_blank">Kuka olen</a>
+                    <a href="kukaolen.html">Kuka olen</a>
                   </div>
                   <div class="Navbar__Link">
-                    <a href="tyohistoriani.html" target="_blank">Työhistoriani</a>
+                    <a href="tyohistoriani.html">Työhistoriani</a>
                   </div>
                   <div class="Navbar__Link">
-                    <a href="koulutustaustani.html" target="_blank">Koulutustaustani</a>
+                    <a href="koulutustaustani.html">Koulutustaustani</a>
                   </div>
                   <div class="Navbar__Link">
-                    <a href="otayhteytta.html" target="_blank">Ota yhteyttä</a>
+                    <a href="otayhteytta.html">Ota yhteyttä</a>
                   </div>
                 </nav>
               </div>
@@ -48,28 +47,28 @@
 
             <div class="column">
               <div class="fplink">
-                    <a href="kukaolen.html" target="_blank">Kuka olen</a>
+                    <a href="kukaolen.html">Kuka olen</a>
               </div>
                 <p>Olen pirteä ja neuvokas valtion virkahenkilö, joka on onnellisimmillaan lankakerien ympäröimänä. Intohimonani on uuden oppiminen – ja salmiakki.</p>
             </div>
 
             <div class="column">
                 <div class="fplink">
-                    <a href="tyohistoriani.html" target="_blank">Työhistoriani</a>
+                    <a href="tyohistoriani.html">Työhistoriani</a>
                 </div>
                 <p>Minulla on vankka työkokemus kirjasto- ja tietopalvelualalta. Olen työskennellyt viimeiset kymmenen vuotta valtion erikoiskirjastoissa monipuolisissa työtehtävissä.</p>
             </div>
            
             <div class="column">
                 <div class="fplink">
-                    <a href="koulutustaustani.html" target="_blank">Koulutustaustani</a>
+                    <a href="koulutustaustani.html">Koulutustaustani</a>
                 </div>
                 <p>Olen opiskellut sekä humanistisia että luonnontieteellisiä aloja. Minulla on maisterintutkinnot englantilaisesta filologiasta ja tieto- ja asiakirjahallinnosta, ja tällä hetkellä opiskelen it-tradenomiksi.</p>
             </div>
             
             <div class="column">
                 <div class="fplink">
-                    <a href="otayhteytta.html" target="_blank">Ota yhteyttä</a>
+                    <a href="otayhteytta.html">Ota yhteyttä</a>
                 </div>
                 <p>Haluatko tutustua minuun tarkemmin? Heräsikö mielessäsi jotain kysyttävää? Laita viestiä, niin olen sinuun pian yhteydessä! </p>
             </div>
@@ -77,7 +76,7 @@
     </div>
 
         <div class="footer">
-            <p>© Katriina Tiainen 2023 | <a href="otayhteytta.html" target="_blank">Ota yhteyttä</a></p>
+            <p>© Katriina Tiainen 2023 | <a href="otayhteytta.html">Ota yhteyttä</a></p>
         </div>
     <script>
     function classToggle() {
