--- a/koulutustaustani.html
+++ b/koulutustaustani.html
@@ -5,29 +5,32 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <script src="myScript.js"></script>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="header">
             <div class="Navbar">
                   <div class="Navbar__Link-brand">
-                    <a href="index.html" target="_blank">Katriina Tiainen</a>
+                    <a href="index.html">Katriina Tiainen</a>
                   </div>
                   <div class="Navbar__Link Navbar__Link-toggle">
                     <i class="material-icons" style="font-size: 36px">menu</i>
                   </div>
                 <nav class="Navbar__Items">
                   <div class="Navbar__Link">
-                    <a href="index.html" target="_blank">Etusivu</a>
+                    <a href="index.html">Etusivu</a>
                   </div>
                   <div class="Navbar__Link">
-                    <a href="kukaolen.html" target="_blank">Kuka olen</a>
+                    <a href="kukaolen.html">Kuka olen</a>
                   </div>
                   <div class="Navbar__Link">
-                    <a href="tyohistoriani" target="_blank">Työhistoriani</a>
+                    <a href="tyohistoriani">Työhistoriani</a>
                   </div>
                   <div class="Navbar__Link">
-                    <a href="otayhteytta.html" target="_blank">Ota yhteyttä</a>
+                    <a href="otayhteytta.html">Ota yhteyttä</a>
                   </div>
                 </nav>
               </div>
@@ -55,7 +58,7 @@
         </div>
 
         <div class="footer">
-            <p>© Katriina Tiainen 2023 | <a href="otayhteytta.html" target="_blank">Ota yhteyttä</a></p>
+            <p>© Katriina Tiainen 2023 | <a href="otayhteytta.html">Ota yhteyttä</a></p>
         </div>
         <script>
           function classToggle() {
