--- a/otayhteytta.html
+++ b/otayhteytta.html
@@ -6,28 +6,32 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="header">
             <div class="Navbar">
                   <div class="Navbar__Link-brand">
-                    <a href="index.html" target="_blank">Katriina Tiainen</a>
+                    <a href="index.html">Katriina Tiainen</a>
                   </div>
                   <div class="Navbar__Link Navbar__Link-toggle">
                     <i class="material-icons" style="font-size: 36px">menu</i>
                   </div>
                 <nav class="Navbar__Items">
                   <div class="Navbar__Link">
-                    <a href="index.html" target="_blank">Etusivu</a>
+                    <a href="index.html">Etusivu</a>
                   </div>
                   <div class="Navbar__Link">
-                    <a href="kukaolen.html" target="_blank">Kuka olen</a>
+                    <a href="kukaolen.html">Kuka olen</a>
                   </div>
                   <div class="Navbar__Link">
-                    <a href="tyohistoriani.html" target="_blank">Työhistoriani</a>
+                    <a href="tyohistoriani.html">Työhistoriani</a>
                   </div>
                   <div class="Navbar__Link">
-                    <a href="koulutustaustani" target="_blank">Koulutustaustani</a>
+                    <a href="koulutustaustani">Koulutustaustani</a>
                   </div>
                 </nav>
               </div>
@@ -52,7 +56,7 @@
         </div>
         
         <div class="footer">
-            <p>© Katriina Tiainen 2023 | <a href="otayhteytta.html" target="_blank">Ota yhteyttä</a></p>
+            <p>© Katriina Tiainen 2023 | <a href="otayhteytta.html">Ota yhteyttä</a></p>
         </div>
         <script>
           function classToggle() {
