--- a/tyohistoriani.html
+++ b/tyohistoriani.html
@@ -51,7 +51,7 @@
             <p><b>Tietopalvelusihteeri</b><br>
               Olin harjoittelijana Helsingin kaupungin tietokeskuksella, jossa tehtäviini kuului tietoaineistojen luettelointia ja sisällönkuvailua, kaukopalvelun hoitamista, kokoelman ylläpitoa sekä osallistumista tietopalveluun ja asiakaspalveluun.</p>
             <h2>Kesätöitä 2001–2011</h2>
-              Ennen varsinaisen urani urkenemista tein erilaisia kesätöitä. Olen ollut mm. turistioppaana, siivoamassa hotelleja ja sairaaloita sekä poimimassa mansikoita.</p>
+              <p>Ennen varsinaisen urani urkenemista tein erilaisia kesätöitä. Olen ollut mm. turistioppaana, siivoamassa hotelleja ja sairaaloita sekä poimimassa mansikoita.</p>
         </div>
         
         <div class="footer">
