--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Katriina Tiainen</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +17,7 @@
                     <a href="index.html">Katriina Tiainen</a>
                   </div>
                   <div class="Navbar__Link Navbar__Link-toggle">
-                    <i class="material-icons" style="font-size: 40px">menu</i>
+                    <i class="material-icons" style="font-size: 36px">menu</i>
                   </div>
                 <nav class="Navbar__Items">
                   <div class="Navbar__Link">
