--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fi">
     <head>
         <title>Katriina Tiainen</title>
         <meta charset="UTF-8">
@@ -13,9 +13,9 @@
     <body>
         <div class="header">
             <div class="Navbar">
-                  <div class="Navbar__Link-brand">
-                    <a href="index.html">Katriina Tiainen</a>
-                  </div>
+                    <div class="Navbar__Link-brand">
+                      <a href="index.html">Katriina Tiainen</a>
+                    </div>
                   <div class="Navbar__Link Navbar__Link-toggle">
                     <i class="material-icons" style="font-size: 36px">menu</i>
                   </div>
@@ -43,6 +43,7 @@
             </div>
 
             <div class="column">
+                <h1 class="hidden">Katriina Tiainen</h1>
                 <p class="lead">Moi! Olen Katriina, pistämätön tietoalan ammattilainen. Hyppää syvemmälle ja tutustu minuun ja osaamiseeni!</p>
             </div>
 
