--- a/otayhteytta.html
+++ b/otayhteytta.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fi">
     <head>
         <title>Katriina Tiainen | Ota yhteyttä</title>
         <meta charset="UTF-8">
@@ -7,7 +7,6 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -45,7 +44,7 @@
           <div class="some">
             <ul>
               <li><a href="mailto:katriina.tiainen@gmail.com" title="Sähköposti" target="_blank" rel="nofollow"><i class="fa fa-envelope" aria-hidden="true"></i>
-                <span>katriina.tiainen@gmail.com</span></a></li>
+                <span>Sähköposti</span></a></li>
               <li><a href="https://www.linkedin.com/in/katriina-tiainen/" title="LinkedIn" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>
                   <span>LinkedIn</span></a></li>
               <li><a href="https://www.instagram.com/magnisinootti/" title="Instagram" target="_blank" rel="nofollow"><i class="fa fa-instagram" aria-hidden="true"></i>
