--- a/koulutustaustani.html
+++ b/koulutustaustani.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="fi">
     <head>
         <title>Katriina Tiainen | Koulutustaustani</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
