--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
                       <a href="index.html">Katriina Tiainen</a>
                     </div>
                   <div class="Navbar__Link Navbar__Link-toggle">
-                    <i class="material-icons" style="font-size: 36px">menu</i>
+                    <i class="fa fa-bars" style="font-size: 36px"></i>
                   </div>
                 <nav class="Navbar__Items">
                   <div class="Navbar__Link">
