--- a/index.html
+++ b/index.html
@@ -317,13 +317,13 @@
         <div id="sukat" class="carousel slide" data-bs-ride="carousel">
 
           <div class="carousel-indicators">
-            <button type="button" data-bs-target="#sukat" data-bs-slide-to="0" class="active"></button>
-            <button type="button" data-bs-target="#sukat" data-bs-slide-to="1"></button>
-            <button type="button" data-bs-target="#sukat" data-bs-slide-to="2"></button>
-            <button type="button" data-bs-target="#sukat" data-bs-slide-to="3"></button>
-            <button type="button" data-bs-target="#sukat" data-bs-slide-to="4"></button>
-            <button type="button" data-bs-target="#sukat" data-bs-slide-to="5"></button>
-            <button type="button" data-bs-target="#sukat" data-bs-slide-to="6"></button>
+            <button type="button" data-bs-target="#sukat" data-bs-slide-to="0" class="active" aria-label="kuva 1"></button>
+            <button type="button" data-bs-target="#sukat" data-bs-slide-to="1" aria-label="kuva 2"></button>
+            <button type="button" data-bs-target="#sukat" data-bs-slide-to="2" aria-label="kuva 3"></button>
+            <button type="button" data-bs-target="#sukat" data-bs-slide-to="3" aria-label="kuva 4"></button>
+            <button type="button" data-bs-target="#sukat" data-bs-slide-to="4" aria-label="kuva 5"></button>
+            <button type="button" data-bs-target="#sukat" data-bs-slide-to="5" aria-label="kuva 6"></button>
+            <button type="button" data-bs-target="#sukat" data-bs-slide-to="6" aria-label="kuva 7"></button>
           </div>
 
           <!-- Karuselli -->
@@ -380,10 +380,10 @@
           </div>
 
           <!-- Nämä prev- ja next-ikonit jäivät vähän huonosti kuvien ulkopuolelle muissa kuin mobiilinäytöissä. -->
-          <button class="carousel-control-prev" type="button" data-bs-target="#sukat" data-bs-slide="prev">
+          <button class="carousel-control-prev" type="button" data-bs-target="#sukat" data-bs-slide="prev" aria-label="edellinen kuva">
             <span class="carousel-control-prev-icon"></span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#sukat" data-bs-slide="next">
+          <button class="carousel-control-next" type="button" data-bs-target="#sukat" data-bs-slide="next" aria-label="seuraava kuva">
             <span class="carousel-control-next-icon"></span>
           </button>
         </div>
