Lisätty pari kommenttia

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
   </nav>
 
-  <!-- Tässä ruudukko, jossa yhdellä palstalla teksti ja toisella kuva. Ruudukko on määritelty niin, että teksti ja kuvat pysyvät mukavan kokoisina eri kokoisilla näytöillä. Pienimmällä näytöllä kuvaa ei näytetä ollenkaan. -->
+  <!-- Tässä ruudukko, jossa yhdellä palstalla teksti ja toisella kuva. Ruudukko on määritelty niin, että teksti ja kuva pysyvät mukavan kokoisina eri kokoisilla näytöillä. Pienimmällä näytöllä kuvaa ei näytetä ollenkaan. -->
    <section id="alku">
     <div class="container-lg">
       <div class="row justify-content-center align-items-center">
@@ -315,7 +315,8 @@
         <h2>Selaile sukkia</h2>
         <p>Neulon paljon sukkia. Kurkkaa, millaisia!</p>
         <div id="sukat" class="carousel slide" data-bs-ride="carousel">
-
+          
+          <!-- Karusellin alaosan kuvanvaihtopainikkeet -->
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#sukat" data-bs-slide-to="0" class="active" aria-label="kuva 1"></button>
             <button type="button" data-bs-target="#sukat" data-bs-slide-to="1" aria-label="kuva 2"></button>
@@ -379,7 +380,7 @@
             </div>
           </div>
 
-          <!-- Nämä prev- ja next-ikonit jäivät vähän huonosti kuvien ulkopuolelle muissa kuin mobiilinäytöissä. -->
+          <!-- Nämä prev- ja next-ikonit jäivät vähän huonosti kuvien ulkopuolelle muissa kuin mobiilinäytöissä. Yritin muokkailla näkymää erilaisilla ratkaisuilla, mutta mikään ei ollut optimaalinen. -->
           <button class="carousel-control-prev" type="button" data-bs-target="#sukat" data-bs-slide="prev" aria-label="edellinen kuva">
             <span class="carousel-control-prev-icon"></span>
           </button>
