--- a/toteutus.html
+++ b/toteutus.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="fi">
 <head>
-  <title>JSON Example</title>  
+  <title>Toteutus</title>  
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 <body> 
   <div id="vastaus"></div>
-  <script src="oma.js"></script>
+  <script src="oma2.js"></script>
 </body>
