--- a/kurssi.html
+++ b/kurssi.html
@@ -4,8 +4,47 @@
   <title>JSON Example</title>  
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Ikonit -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <!-- Omat tyylit -->
+  <link rel="stylesheet" href="style2.css">
+</head>
 <body> 
-  <div id="vastaus"></div>
-  <script src="oma.js"></script>
+      <!-- Navigaatio -->
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
+        <div class="container-xxl">
+        <a href="https://katriinat.github.io/kurssi" class="navbar-brand">
+            <span>
+            <i class="bi bi-database" aria-hidden="true"></i> JSON-tehtävät <i class="bi bi-database"></i>
+            </span>
+        </a>
+        <!-- Hampurilaisvalikko pienille näytöille -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Navigaation linkit -->
+        <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
+            <ul class="navbar-nav align-items-end">
+            <li class="nav-item">
+                <a class="nav-link" href="https://katriinat.github.io/kurssi">Kurssi</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://katriinat.github.io/toteutus">Toteutus</a>
+            </li>
+            </ul>
+        </div>
+        </div>
+    </nav>
+
+    <!-- Sisältö ruudukkoon -->
+    <div class="container-lg"> 
+        <div class="row justify-content-center align-items-center">
+            <div class="col-md-9"> 
+                <div id="vastaus"></div>
+            </div>
+        </div>
+    </div>
+    <script src="oma.js"></script>
 </body>
