--- a/kurssi.html
+++ b/kurssi.html
@@ -15,7 +15,7 @@
         <div class="container-xxl">
         <a href="https://katriinat.github.io/kurssi" class="navbar-brand">
             <span>
-            <i class="bi bi-database" aria-hidden="true"></i> JSON-tehtävät <i class="bi bi-database"></i>
+            <i class="bi bi-database" aria-hidden="true"></i> Tehtävät 1 ja 2 <i class="bi bi-database"></i>
             </span>
         </a>
         <!-- Hampurilaisvalikko pienille näytöille -->
