--- a/toteutus.html
+++ b/toteutus.html
@@ -15,9 +15,9 @@
       <!-- Navigaatio -->
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
         <div class="container-xxl">
-        <a href="https://katriinat.github.io/kurssi" class="navbar-brand">
+        <a href="https://katriinat.github.io/toteutus" class="navbar-brand">
             <span>
-            <i class="bi bi-database" aria-hidden="true"></i> JSON-tehtävät <i class="bi bi-database"></i>
+            <i class="bi bi-database" aria-hidden="true"></i> Tehtävät 1 ja 2 <i class="bi bi-database"></i>
             </span>
         </a>
         <!-- Hampurilaisvalikko pienille näytöille -->
