--- a/junat.html
+++ b/junat.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="fi">
 <head>
-    <title>Toteutus</title>  
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Ikonit -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <!-- Omat tyylit -->
-    <link rel="stylesheet" href="style2.css">
+  <title>Tehtävä 4</title>  
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Ikonit -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body> 
       <!-- Navigaatio -->
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
         <div class="container-xxl">
-        <a href="https://katriinat.github.io/toteutus" class="navbar-brand">
+        <a href="https://katriinat.github.io/junat" class="navbar-brand">
             <span>
-            <i class="bi bi-database" aria-hidden="true"></i> Tehtävät 1 ja 2 <i class="bi bi-database"></i>
+            <i class="bi bi-database" aria-hidden="true"></i> Tehtävä 4 <i class="bi bi-database"></i>
             </span>
         </a>
         <!-- Hampurilaisvalikko pienille näytöille -->
@@ -28,10 +26,10 @@
         <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
             <ul class="navbar-nav align-items-end">
             <li class="nav-item">
-                <a class="nav-link" href="https://katriinat.github.io/kurssi">Kurssi</a>
+                <a class="nav-link" href="https://katriinat.github.io/liikennekamera">Liikennekamera</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://katriinat.github.io/toteutus">Toteutus</a>
+                <a class="nav-link" href="https://katriinat.github.io/junat">Junat</a>
             </li>
             </ul>
         </div>
@@ -46,6 +44,7 @@
             </div>
         </div>
     </div>
-
-    <script src="oma2.js"></script>
+    <script>
+        
+    </script>
 </body>
