--- a/toteutus.html
+++ b/toteutus.html
@@ -17,7 +17,7 @@
         <div class="container-xxl">
         <a href="https://katriinat.github.io/toteutus" class="navbar-brand">
             <span>
-            <i class="bi bi-database" aria-hidden="true"></i> Tehtävät 1 ja 2 <i class="bi bi-database"></i>
+            <i class="bi bi-database" aria-hidden="true"></i> JSON-tehtävät <i class="bi bi-database"></i>
             </span>
         </a>
         <!-- Hampurilaisvalikko pienille näytöille -->
@@ -27,12 +27,24 @@
         <!-- Navigaation linkit -->
         <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
             <ul class="navbar-nav align-items-end">
-            <li class="nav-item">
-                <a class="nav-link" href="https://katriinat.github.io/kurssi">Kurssi</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="https://katriinat.github.io/toteutus">Toteutus</a>
-            </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://katriinat.github.io/kurssi">Kurssi</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://katriinat.github.io/toteutus">Toteutus</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://katriinat.github.io/tapahtumat">Tapahtumat</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://katriinat.github.io/saa">Sää</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://katriinat.github.io/liikennekamera">Liikennekamera</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://katriinat.github.io/junat">Junat</a>
+                </li>
             </ul>
         </div>
         </div>
