--- a/itapasila/index.html
+++ b/itapasila/index.html
@@ -152,28 +152,28 @@
                                 <div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
                                     <div class="text-center bg-primary py-5 px-4">
                                         <i class="bi bi-people text-light" style="font-size: 50px;"></i>
-                                        <h3 class="display-6 text-white" data-toggle="counter-up" id="asukkaat"></h3>
+                                        <h3 class="display-6 text-white" data-toggle="counter-up" id="asukkaat">Asukasta</h3>
                                         <span class="fs-5 fw-semi-bold text-white">Asukasta</span>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
                                     <div class="text-center bg-secondary py-5 px-4">
                                         <i class="bi bi-person-arms-up text-dark" style="font-size: 50px;"></i>
-                                        <h3 class="display-6" data-toggle="counter-up" id="keskiika"></h3>
+                                        <h3 class="display-6" data-toggle="counter-up" id="keskiika">Keski-ikä</h3>
                                         <span class="fs-5 fw-semi-bold text-dark">Keski-ikä</span>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
                                     <div class="text-center bg-secondary py-5 px-4">
                                         <i class="bi bi-houses text-dark" style="font-size: 50px;"></i>
-                                        <h3 class="display-6" data-toggle="counter-up" id="asunnot"></h3>
+                                        <h3 class="display-6" data-toggle="counter-up" id="asunnot">Asuntoa</h3>
                                         <span class="fs-5 fw-semi-bold text-dark">Asuntoa</span>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 wow fadeIn" data-wow-delay="0.7s">
                                     <div class="text-center bg-primary py-5 px-4">
                                         <i class="bi bi-buildings text-light" style="font-size: 50px;"></i>
-                                        <h3 class="display-6 text-white" data-toggle="counter-up" id="tyopaikat"></h3>
+                                        <h3 class="display-6 text-white" data-toggle="counter-up" id="tyopaikat">Työpaikkaa</h3>
                                         <span class="fs-5 fw-semi-bold text-white">Työpaikkaa</span>
                                     </div>
                                 </div>
