--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                     Mistä löydän loput Katriinan käsityöt?
                   </button>
                 </h2>
-                <div id="kysymys-2" class="accordion-collapse collapse" data-bs-parent="#kysymykset">
+                <div id="kysymys-2" class="accordion-collapse hidden-content" data-bs-parent="#kysymykset">
                   <div class="accordion-body text-start">
                     <p>Tällä sivulla on esitelty vain muutama tekemäni käsityö. Kaikki projektini löydät <a href="https://www.ravelry.com/people/Magnisinootti">Ravelry-sivuiltani</a>. Projektieni tarkasteluun tarvitset Ravelry-tunnukset.</p>
                   </div>
